--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
         tools:context="com.skytreasure.firebasemultiaccountlogin.ui.LoginActivity">
 
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -18,6 +19,13 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:text="Sign Up With Email" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="Google Sign IN"
+                android:id="@+id/btn_google"/>
 
 
         </LinearLayout>
